# weather-data

./: README.md  pyproject.toml
src/: export_data.py  models.py  weather.db  weather_data.py
src/configs/: db_config.yaml
src/data/: weather_data.xlsx
